{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 36,
  "lineage": "aacc0b6b-422b-5cbe-23c6-9a5abd5867e0",
  "resources": [
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:internet-gateway/igw-0b97c792b53897a60",
            "id": "igw-0b97c792b53897a60",
            "owner_id": "885300287765",
            "tags": {
              "Name": "aadi-vpc"
            },
            "tags_all": {
              "Name": "aadi-vpc"
            },
            "vpc_id": "vpc-0c66dc758d3644400"
          },
          "dependencies": [
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b97c792b53897a60",
            "id": "r-rtb-0dd538788f70dbb671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dd538788f70dbb67",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aadi_vpc.aws_internet_gateway.this",
            "module.aadi_vpc.aws_route_table.public",
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:route-table/rtb-0dd538788f70dbb67",
            "id": "rtb-0dd538788f70dbb67",
            "owner_id": "885300287765",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "aadi-vpc-public"
            },
            "tags_all": {
              "Name": "aadi-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c66dc758d3644400"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077abeb7246c3c7fd",
            "route_table_id": "rtb-0dd538788f70dbb67",
            "subnet_id": "subnet-07bd9c911e8e4d087"
          },
          "dependencies": [
            "module.aadi_vpc.aws_route_table.public",
            "module.aadi_vpc.aws_subnet.public",
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0905cdfa576198dae",
            "route_table_id": "rtb-0dd538788f70dbb67",
            "subnet_id": "subnet-09940de62434cc018"
          },
          "dependencies": [
            "module.aadi_vpc.aws_route_table.public",
            "module.aadi_vpc.aws_subnet.public",
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-07bd9c911e8e4d087",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bd9c911e8e4d087",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aadi-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "aadi-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-0c66dc758d3644400"
          },
          "dependencies": [
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:subnet/subnet-09940de62434cc018",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09940de62434cc018",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "885300287765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "aadi-vpc-public-us-east-2c"
            },
            "tags_all": {
              "Name": "aadi-vpc-public-us-east-2c"
            },
            "vpc_id": "vpc-0c66dc758d3644400"
          },
          "dependencies": [
            "module.aadi_vpc.aws_vpc.this",
            "module.aadi_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aadi_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:vpc/vpc-0c66dc758d3644400",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09db6bd3a81180de0",
            "default_route_table_id": "rtb-0f41c2ab79a07f2ef",
            "default_security_group_id": "sg-05f9fb676c292ac88",
            "dhcp_options_id": "dopt-0a44ae30c69b8db23",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c66dc758d3644400",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f41c2ab79a07f2ef",
            "owner_id": "885300287765",
            "tags": {
              "Name": "aadi-vpc"
            },
            "tags_all": {
              "Name": "aadi-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.main_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:885300287765:security-group/sg-01763540dabe1ae82",
            "description": "Security group which is used as an argument in complete-sg",
            "egress": [],
            "id": "sg-01763540dabe1ae82",
            "ingress": [],
            "name": "main-sg-20220621111516158500000001",
            "name_prefix": "main-sg-",
            "owner_id": "885300287765",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0490d68147e590e2d"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.main_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.10.0.0/20"
            ],
            "description": "Service name",
            "from_port": 22,
            "id": "sgrule-1606322019",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01763540dabe1ae82",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_sg.aws_security_group.this",
            "module.main_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}